--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dev": "nodemon src/app.ts",
     "build": "tspc --build",
     "lint": "eslint .",
+    "seed": "ts-node prisma/seed.ts",
+    "unseed": "ts-node prisma/unseed.ts",
     "test": "jest"
   },
   "jest": {
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "@dotenvx/dotenvx": "1.36.0",
+    "@prisma/client": "6.3.1",
     "express": "4.21.2",
     "ts-patch": "3.3.0",
     "typescript-transform-paths": "3.5.3"
@@ -45,6 +48,7 @@
     "eslint-plugin-import": "2.31.0",
     "jest": "29.7.0",
     "nodemon": "3.1.9",
+    "prisma": "6.3.1",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.3"
