--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@dotenvx/dotenvx": "1.36.0",
     "@prisma/client": "6.3.1",
     "express": "4.21.2",
+    "multer": "1.4.5-lts.1",
     "ts-patch": "3.3.0",
     "typescript-transform-paths": "3.5.3"
   },
@@ -48,6 +49,7 @@
     "@eslint/eslintrc": "3.2.0",
     "@types/express": "5.0.0",
     "@types/jest": "29.5.14",
+    "@types/multer": "1.4.12",
     "@types/node": "22.13.4",
     "@typescript-eslint/eslint-plugin": "8.24.0",
     "@typescript-eslint/parser": "8.24.0",
