Add image storage service

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 PORT=8888
 DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
+AWS_ACCESS_KEY_ID=abcde
+AWS_SECRET_ACCESS_KEY=12345
+AWS_REGION=some-region
+AWS_S3_BUCKET_NAME=some-bucket-name
