--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "verbose": true
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "3.750.0",
     "@dotenvx/dotenvx": "1.36.0",
     "@prisma/client": "6.3.1",
     "express": "4.21.2",
