--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
       "^@database/(.*)$": "<rootDir>/src/database/$1",
       "^@handlers/(.*)$": "<rootDir>/src/handlers/$1",
       "^@interfaces/(.*)$": "<rootDir>/src/interfaces/$1",
-      "^@routes/(.*)$": "<rootDir>/src/routes/$1"
+      "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
+      "^@routes/(.*)$": "<rootDir>/src/routes/$1",
+      "^@services/(.*)$": "<rootDir>/src/services/$1"
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/dist/"
