--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev": "nodemon src/app.ts",
     "build": "tspc --build",
     "lint": "eslint .",
+    "migrate:up": "prisma migrate deploy",
     "seed": "ts-node prisma/seed.ts",
     "unseed": "ts-node prisma/unseed.ts",
     "test": "jest"
@@ -42,7 +43,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.750.0",
     "@dotenvx/dotenvx": "1.36.0",
-    "@prisma/client": "6.3.1",
+    "@prisma/client": "6.4.1",
     "express": "4.21.2",
     "multer": "1.4.5-lts.1",
     "ts-patch": "3.3.0",
@@ -60,7 +61,7 @@
     "eslint-plugin-import": "2.31.0",
     "jest": "29.7.0",
     "nodemon": "3.1.9",
-    "prisma": "6.3.1",
+    "prisma": "6.4.1",
     "ts-jest": "29.2.5",
     "ts-node": "10.9.2",
     "typescript": "5.7.3"
