--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
       "src"
     ],
     "moduleNameMapper": {
+      "^@constants/(.*)$": "<rootDir>/src/constants/$1",
       "^@database/(.*)$": "<rootDir>/src/database/$1",
       "^@handlers/(.*)$": "<rootDir>/src/handlers/$1",
       "^@interfaces/(.*)$": "<rootDir>/src/interfaces/$1",
@@ -46,6 +47,7 @@
     "@prisma/client": "6.4.1",
     "express": "4.21.2",
     "multer": "1.4.5-lts.1",
+    "sharp": "0.33.5",
     "ts-patch": "3.3.0",
     "typescript-transform-paths": "3.5.3"
   },
