--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ AWS_SECRET_ACCESS_KEY=12345
 # AWS_REGION=some-region
 AWS_S3_BUCKET_NAME=some-bucket-name
 AWS_S3_ENDPOINT=http://localhost:9000
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
