--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@aws-sdk/client-s3": "3.750.0",
     "@dotenvx/dotenvx": "1.36.0",
     "@prisma/client": "6.4.1",
+    "bullmq": "5.41.5",
     "express": "4.21.2",
     "multer": "1.4.5-lts.1",
     "sharp": "0.33.5",
