Add missing Postgres from env example

--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,9 @@ AWS_SECRET_ACCESS_KEY=12345
 AWS_S3_BUCKET_NAME=some-bucket-name
 AWS_S3_ENDPOINT=http://localhost:9000
 
+POSTGRES_USER=some-user
+POSTGRES_PASSWORD=some-password
+POSTGRES_DB=some-database
+
 REDIS_HOST=localhost
 REDIS_PORT=6379
