--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@prisma/client": "6.4.1",
     "bullmq": "5.41.5",
     "express": "4.21.2",
+    "express-validator": "7.2.1",
     "multer": "1.4.5-lts.1",
     "sharp": "0.33.5",
     "ts-patch": "3.3.0",
