Annotate .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,24 @@
+# application
 PORT=8888
-DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
+
+# MinIO or AWS S3
 AWS_ACCESS_KEY_ID=abcde
 AWS_SECRET_ACCESS_KEY=12345
-# AWS_REGION=some-region
 AWS_S3_BUCKET_NAME=some-bucket-name
 AWS_S3_ENDPOINT=http://localhost:9000
+# AWS_REGION=some-region # not used by MinIO
 
+# Prisma
+DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
+
+# Postgres
 POSTGRES_USER=some-user
 POSTGRES_PASSWORD=some-password
 POSTGRES_DB=some-database
 
+# REDIS
 REDIS_HOST=localhost
 REDIS_PORT=6379
 
-# set in KB
-IMAGE_MAX_SIZE=1024
+# misc
+IMAGE_MAX_SIZE=1024 # set in KB
