--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
       "^@interfaces/(.*)$": "<rootDir>/src/interfaces/$1",
       "^@middleware/(.*)$": "<rootDir>/src/middleware/$1",
       "^@routes/(.*)$": "<rootDir>/src/routes/$1",
-      "^@services/(.*)$": "<rootDir>/src/services/$1"
+      "^@services/(.*)$": "<rootDir>/src/services/$1",
+      "^test/(.*)$": "<rootDir>/test/$1"
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/dist/"
