Add TODO for env vars

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ AWS_S3_BUCKET_NAME=some-bucket-name
 AWS_S3_ENDPOINT=http://localhost:9000
 # AWS_REGION=some-region # not used by MinIO
 
+# TODO: Concatenate the POSTGRES_ vars to form DATABASE_URL
 # Prisma
 DATABASE_URL=postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
 
